--- a/index.html
+++ b/index.html
@@ -3,4 +3,12 @@ layout: pages
 categories: [menu]
 date: 2016-01-01 00:00:00
 ---
-{{page}}
+
+<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ut odio quis felis fringilla tempor non id sem. Ut eros lorem, luctus a risus ut, tempus tempor elit. Praesent sed nisl interdum, placerat orci eget, finibus nunc. Vestibulum consequat leo id lacus accumsan auctor. Mauris laoreet purus nec eros efficitur ornare in non felis. Nullam gravida pulvinar dolor nec consequat. Nunc ut sapien ut eros tempus iaculis vel ultricies augue. Nunc nisi orci, consequat quis eros sed, imperdiet tempus nisi. Sed non est dui. Pellentesque id leo vel leo volutpat molestie. Nunc vitae ligula non magna suscipit aliquam at ac mi. Fusce sit amet ornare eros. Mauris porta lorem mauris, vitae mattis justo elementum sit amet. Quisque in erat eu metus tristique laoreet ut in mauris. 
+</p>
+
+<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ut odio quis felis fringilla tempor non id sem. Ut eros lorem, luctus a risus ut, tempus tempor elit. Praesent sed nisl interdum, placerat orci eget, finibus nunc. Vestibulum consequat leo id lacus accumsan auctor. Mauris laoreet purus nec eros efficitur ornare in non felis. Nullam gravida pulvinar dolor nec consequat. Nunc ut sapien ut eros tempus iaculis vel ultricies augue. Nunc nisi orci, consequat quis eros sed, imperdiet tempus nisi. Sed non est dui. Pellentesque id leo vel leo volutpat molestie. Nunc vitae ligula non magna suscipit aliquam at ac mi. Fusce sit amet ornare eros. Mauris porta lorem mauris, vitae mattis justo elementum sit amet. Quisque in erat eu metus tristique laoreet ut in mauris. 
+</p>
+
