Minimum functioning website.

--- a/contact.html
+++ b/contact.html
@@ -3,5 +3,10 @@ layout: pages
 categories: [menu]
 date: 2016-01-06 00:00:00
 ---
-
-
+<p>
+We are located at 210 Whitehall Street as part of the Footscray Maker Coop.
+</p>
+<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=144.89908397197723%2C-37.81365329196434%2C144.9032360315323%2C-37.808821884358714&amp;layer=mapnik&amp;marker=-37.81123762767935%2C144.90116000175476" style="border: 1px solid black"></iframe><br/><small><a href="http://www.openstreetmap.org/?mlat=-37.81124&amp;mlon=144.90116#map=18/-37.81124/144.90116">View Larger Map</a></small>
+<p>
+Email: anton@openfab.com.au
+</p>
