--- a/events.html
+++ b/events.html
@@ -5,3 +5,14 @@ date: 2016-01-04 00:00:00
 ---
 
 
+<p>
+Events are handled through our 
+<a href='http://www.meetup.com/OpenFab-Meetup/'>meetup page</a>.
+</p>
+<p>
+A calendar of what is happening next is bellow.
+</p>
+<div class='center'>
+<iframe width="225" height="570" src="http://meetu.ps/2WMXKR" frameborder="0"></iframe>
+</div>
+
