--- a/forum.html
+++ b/forum.html
@@ -4,4 +4,7 @@ categories: [menu]
 date: 2016-01-03 00:00:00
 ---
 
-
+<p>
+We use a subreddit as our main forum: 
+<a href='https://www.reddit.com/r/openfab/'>OpenFab</a>.
+</p>
