--- a/join.html
+++ b/join.html
@@ -4,4 +4,6 @@ categories: [menu]
 date: 2016-01-05 00:00:00
 ---
 
-
+<p>
+To join please use our club page at <a href='https://openfab.tidyhq.com/'>tidy club</a>.
+</p>
