--- a/tools.html
+++ b/tools.html
@@ -4,4 +4,9 @@ categories: [menu]
 date: 2016-01-02 00:00:00
 ---
 
+<p>
 
+The state of tools, planned maintenance and anything else of interest is found at 
+<a href='https://trello.com/openfabtools'>our trello board</a>.
+
+</p>
