Fixing up css and adding details to tools.

--- a/tools.html
+++ b/tools.html
@@ -5,8 +5,9 @@ date: 2016-01-02 00:00:00
 ---
 
 <p>
-
 The state of tools, planned maintenance and anything else of interest is found at 
 <a href='https://trello.com/openfabtools'>our trello board</a>.
-
+</p>
+<p>
+The documentation for tools, software, and anything else if found at <a href='https://github.com/Open-Fab'>our github page</a>. 
 </p>
